[package]
name = "acme_responder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
acme-lib = "0.9.0"
axum = "0.7.4"
http-body-util = "0.1.0"
reqwest = "0.11.23"
tokio = { version = "1.35.1", features = ["full"] }
